--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,15 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.coroutine_version = '1.3.6'
+    ext.androidx_core_version = '1.3.1'
+    ext.appcompat_version = '1.1.0'
+    ext.glide_version = '4.11.0'
+    ext.constraintlayout_version = '1.1.3'
+    ext.timber_version = '4.7.1'
+    ext.junit_jupiter_version = '5.4.2'
+    ext.androidx_junit_version = '1.1.1'
+    ext.androidx_espresso_version = '3.2.0'
 
     repositories {
         google()
