--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,11 @@ buildscript {
     ext.coroutine_version = '1.3.6'
     ext.androidx_core_version = '1.3.1'
     ext.appcompat_version = '1.1.0'
+    ext.material_version = '1.1.0'
     ext.glide_version = '4.11.0'
+    ext.guava_version = '27.0.1'
     ext.constraintlayout_version = '1.1.3'
+    ext.maps_version = '17.0.0'
     ext.timber_version = '4.7.1'
     ext.junit_jupiter_version = '5.4.2'
     ext.androidx_junit_version = '1.1.1'
